--- a/EmojiPacker/packages.config
+++ b/EmojiPacker/packages.config
@@ -5,6 +5,7 @@
   <package id="MaterialDesignThemes" version="4.0.0" targetFramework="net472" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="SciChart.Wpf.UI.Transitionz" version="3.1.251" targetFramework="net472" />
   <package id="ShowMeTheXAML" version="2.0.0" targetFramework="net472" />
   <package id="WpfAnimatedGif" version="2.0.0" targetFramework="net472" />
 </packages>
